2007-08-13  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* PictureBox.cs: OnAnimateImage/UpdateAnimateImage: Check if handle is still
	  created, it might have gotten destroyed since we last checked. Fixes
	  #82405.

2007-08-11  Jonathan Pobst  <monkey@jpobst.com>

	* ToolTip.cs: Remove mouse in control check from mouseleave handler so
	tooltip will hide when mouse is moved off the control.
	[Fixes bug #82407]

2007-08-11 Andreia Gaita <avidigal@novell.com>

	* WebBrowserBase.cs, WebBrowser.cs: add implementation
	using Mono.Mozilla for loading and navigating webcontrol
	with xulrunner.
	The initial implementation was done on 
	/trunk/mozembed/tests/browser , and copied here.

2007-08-11  Gert Driesen  <drieseng@users.sourceforge.net>

	* ThemeWin32Classic.cs: On 2.0 profile, use ForeColor and BackColor of
	ToolTipWindow for drawing the tooltip. Fixes bug #82408.

2007-08-10  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridView.cs: Add support for an editing row. Fixes #82226.
	  RowTemplateFull: throw an exception if a column doesn't have a template.
	* DataGridViewRowCollection.cs: AddInternal: if there are any editing rows,
	  add the row just before it.
	* DataGridViewTextBoxCell.cs: Don't paint cells which are in edit mode as
	  selected.
	* DataGridViewSelectedRowCollection.cs: Don't return the editing row. Add a
	  DataGridView field to be able to reach the grid's editing row.

2007-08-10  Jonathan Pobst  <monkey@jpobst.com>

	* ToolTip.cs: If the control's handle hasn't been created when it has a
	tooltip set on it, don't check to see if we need to show the tooltip.  This
	check was causing the control's handle to be created.
	[Fixes bug #82399]

2007-08-10  Jonathan Pobst  <monkey@jpobst.com>

	* TextBoxBase.cs: Fix SelectionLength when no text selected to match MS:
					1.1		2.0
	Handle Not Created	-1		0
	Handle Created		0		0
	[Fixes bug #82371]

2007-08-10  Jonathan Pobst  <monkey@jpobst.com>
