@@ -1,3 +1,7 @@
+2007-08-14  Jonathan Pobst  <monkey@jpobst.com>
+
+	* ToolBar.cs: Implement ScaleControl/ScaleCore.
+
 2007-08-13  Rolf Bjarne Kvinge <RKvinge@novell.com> 
 
 	* PictureBox.cs: OnAnimateImage/UpdateAnimateImage: Check if handle is still
